# FinanceAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
app/: config.py  main.py
app/agents/: base.py  orchestrator.py  specialists.py  summary_agent.py
app/infra/: logger.py
app/mcp/: protocol.py  tools.py
app/models/: llm_client.py  news_local_model.py  schemas.py  sentiment_risk.py  train_news_lora.py
app/rag/: chunking.py  embeddings.py  evidence_backfill.py  ingest_build.py  ingestion.py  knowledge_builder.py  pipeline.py  quality_audit.py  real_collectors.py  reranker.py  retriever.py
app/reports/: writer.py
data/knowledge_base/: AAPL_fundamental.md  AAPL_news.md  AAPL_technical.md  AAPL_valuation.md  TSLA_fundamental.md  TSLA_news.md  TSLA_technical.md  TSLA_valuation.md
data/raw/: finance_events.jsonl  real_events.jsonl
docs/: 01-system-architecture.md  02-data-collection-kb.md  03-rag-retrieval.md  04-agent-workflow.md  05-news-model.md  06-config-ops.md  07-testing.md
tests/e2e/: test_smoke.py
tests/integration/: test_report_generation.py  test_report_rich_content.py  test_report_richness.py
tests/unit/: test_agent_content_quality.py  test_chunking.py  test_embedding_reranker_runtime.py  test_evidence_backfill.py  test_kb_incremental.py  test_knowledge_builder.py  test_llm_client.py  test_llm_rewrite_fallback.py  test_mcp_protocol.py  test_quality_audit.py  test_real_collectors.py  test_retrieval.py  test_retrieval_postprocess.py  test_sentiment_risk.py  test_sentiment_risk_engine.py  (+1 more)
(+2 files in other folders)
